--- a/index.html
+++ b/index.html
@@ -1,26 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Office Hits</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+</head>
+<body>
 
-    <h1>What Makes A Box Office Hit?</h1>
+    <!-- Full-screen title page -->
+    <section class="hero">
+      <div class="hero-content">
+          <h1>What Makes A Box Office Hit?</h1>
+          <p>Scroll down to explore the data</p>
+          <div class="arrow">&#x25BC;</div>
+      </div>
+    </section>
 
-    <h2>Budget</h2>
-    <div class='tableauPlaceholder' id='viz1743198047666' style='position: relative'><noscript><a href='#'><img alt='Budget vs Revenue ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bu&#47;BudgetvsRevenue_17431980401120&#47;Sheet6&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='BudgetvsRevenue_17431980401120&#47;Sheet6' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bu&#47;BudgetvsRevenue_17431980401120&#47;Sheet6&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1743198047666');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <!-- Split screen section -->
+    <section class="split-container">
+        <div class="left">
+            <h2>Budget</h2>
+            <p>Here you can describe the impact of budget on revenue...</p>
+        </div>
+        <div class="right">
+            <div class='tableauPlaceholder' id='viz1'>
+                <noscript><a href='#'><img alt='Budget vs Revenue' src='https://public.tableau.com/static/images/Bu/BudgetvsRevenue_17431980401120/Sheet6/1_rss.png' style='border: none' /></a></noscript>
+                <object class='tableauViz' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='BudgetvsRevenue_17431980401120/Sheet6' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                </object>
+            </div>
+        </div>
+    </section>
 
+    <section class="split-container">
+        <div class="left">
+            <h2>Genres</h2>
+            <p>Insights into the highest-grossing genres...</p>
+        </div>
+        <div class="right">
+            <div class='tableauPlaceholder' id='viz2'>
+                <noscript><a href='#'><img alt='Genres' src='https://public.tableau.com/static/images/To/Top10HighestGrossingMovieGenres/Sheet1/1_rss.png' style='border: none' /></a></noscript>
+                <object class='tableauViz' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='Top10HighestGrossingMovieGenres/Sheet1' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                </object>
+            </div>
+        </div>
+    </section>
 
-    
-    <h2>Genres</h2>
-    <div class="embed-container">
-    <div class='tableauPlaceholder' id='viz1743188021269' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Top10HighestGrossingMovieGenres&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1743188021269');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <script type='text/javascript'>
+        var scriptElement = document.createElement('script');
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        document.body.appendChild(scriptElement);
+    </script>
 
-    <div class='tableauPlaceholder' id='viz1743188063715' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;TopEarningGenres&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Top10HighestGrossingMovieGenres&#47;TopEarningGenres' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;TopEarningGenres&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1743188063715');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-  
-    </div>
-  </body>
-</html></a>
+</body>
+</html>
