--- a/index.html
+++ b/index.html
@@ -60,20 +60,21 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Genres</h2>
-							<p>Insights into the highest-grossing genres...</p>
+							<p>Action and Adventure are the top-grossing genres globally, generating over $160 billion combined. 
+						</br> There's a significant drop to Comedy in 3rd place at $18.4B, with Drama and Fantasy close behind.						</p>
+
+
 						</div>
 						<div class="image" id="viz1-container">
-							<div class='tableauPlaceholder' id='viz2' style="width:100%; height:100%;">
-								<noscript><a href='#'><img alt='Genres' src='https://public.tableau.com/static/images/To/Top10HighestGrossingMovieGenres/Sheet1/1_rss.png' style='border: none' /></a></noscript>
-								<object class='tableauViz' style='width:100%; height:100%;'>
-									<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-									<param name='embed_code_version' value='3' />
-									<param name='site_root' value='' />
-									<param name='name' value='Top10HighestGrossingMovieGenres/Sheet1' />
-									<param name='tabs' value='no' />
-									<param name='toolbar' value='yes' />
-								</object>
-							</div>
+							<div class='tableauPlaceholder' id='viz1744219259443' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;TopEarningGenres&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Top10HighestGrossingMovieGenres&#47;TopEarningGenres' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;TopEarningGenres&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744219259443');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+						</div>
+					</section>
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h3>Genres of Top 10 movies</h3>
+							<p>The top highest-earning movies belong mainly to Action, Adventure, Fantasy, and Animation genres.</p>
+								<div class='tableauPlaceholder' id='viz1744219535646' style='position: relative;'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Top10HighestGrossingMovieGenres&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744219535646');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height='500px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+							
 						</div>
 					</section>
 
