Add budget story text + box office hit def

--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
 							<img src="images/box_office.jpg" alt="" />
 						</div>
 					</section>
-
+				
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>A box office hit is a movie with gross revenue is at least 3 times the budget</h2>
+						</div>
+					</section>
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Budget</h2>
-							<p>Here you can describe the impact of budget on revenue...</p>
+							<h2>Money Talks</h2>
+							<p>What does it take for a movie to be considered a box office hit? By comparing the production budgets of films to their worldwide gross, we explore the financial dynamics behind filmmaking. The 3x budget line—often seen as the benchmark for a hit—helps us ask deeper questions: which kinds of films tend to soar past this line, and which ones fall short? Beyond just dollars, these trends hint at what audiences are willing to pay for—and what risks studios are willing to take.</p>
 						</div>
 						<div class="image" id="viz2-container">
 							<div class='tableauPlaceholder' id='viz1' style="width:100%; height:100%;">
