edit genre caption

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 				
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>A box office hit is a movie with gross revenue is at least 3 times the budget</h2>
+							<h2>A box office hit is a movie with gross revenue of at least <strong>3x</strong> the budget</h2>
 						</div>
 					</section>
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Money Talks</h2>
-							<p>What does it take for a movie to be considered a box office hit? By comparing the production budgets of films to their worldwide gross, we explore the financial dynamics behind filmmaking. The 3x budget line—often seen as the benchmark for a hit—helps us ask deeper questions: which kinds of films tend to soar past this line, and which ones fall short? Beyond just dollars, these trends hint at what audiences are willing to pay for—and what risks studios are willing to take.</p>
+							<p>What does it take for a movie to be considered a box office hit? By comparing the production budgets of films to their worldwide gross, we explore the financial dynamics behind filmmaking. The 3x budget line (benchmark for a box office hit) helps us ask deeper questions: which kinds of films tend to soar past this line, and which ones fall short? Beyond just dollars, these trends hint at what audiences are willing to pay for—and what risks studios are willing to take.</p>
 						</div>
 						<div class="image" id="viz2-container">
 							<div class='tableauPlaceholder' id='viz1' style="width:100%; height:100%;">
@@ -64,9 +64,8 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Genres</h2>
-							<p>Action and Adventure are the top-grossing genres globally, generating over $160 billion combined. 
-						</br> There's a significant drop to Comedy in 3rd place at $18.4B, with Drama and Fantasy close behind.						</p>
+							<h2>Genres That Sell</h2>
+							<p>What kinds of stories bring audiences to theaters and keep them coming back? Action and Adventure dominate the global box office, pulling in over $160 billion combined. But there’s a steep drop-off from there: Comedy trails in a distant third at $18.4B, with Drama and Fantasy not far behind. These numbers hint at more than just popularity, they reveal the kinds of emotional experiences and cinematic spectacles people are willing to invest in, and the genres studios are most confident betting on.</p>
 
 
 						</div>
