--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</div>
 					</section>
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="banner style1 orient-right image-position-left fullscreen onload-image-fade-in onload-content-fade-right" id="first">
 						<div class="content">
 							<h2>Money Talks</h2>
 							<p>What does it take for a movie to be considered a box office hit? By comparing the production budgets of films to their worldwide gross, we explore the financial dynamics behind filmmaking. The 3x budget line (benchmark for a box office hit) helps us ask deeper questions: which kinds of films tend to soar past this line, and which ones fall short? Beyond just dollars, these trends hint at what audiences are willing to pay for—and what risks studios are willing to take.</p>
@@ -62,12 +62,10 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="banner style1 orient-left image-position-right fullscreen onload-image-fade-in onload-content-fade-left">
 						<div class="content">
 							<h2>Genres That Sell</h2>
-							<p>What kinds of stories bring audiences to theaters and keep them coming back? Action and Adventure dominate the global box office, pulling in over $160 billion combined. But there’s a steep drop-off from there: Comedy trails in a distant third at $18.4B, with Drama and Fantasy not far behind. These numbers hint at more than just popularity, they reveal the kinds of emotional experiences and cinematic spectacles people are willing to invest in, and the genres studios are most confident betting on.</p>
-
-
+							<p>What kinds of stories bring audiences to theaters and keep them coming back? Action and Adventure dominate the global box office, pulling in over $160 billion combined. But there’s a steep drop-off from there: Comedy trails in a distant third at $18.4B, with Drama and Fantasy not far behind. These numbers hint at more than just popularity, they reveal the kinds of emotional experiences and cinematic experiences people are willing to invest in, and the genres studios are most confident betting on.</p>
 						</div>
 						<div class="image" id="viz1-container">
 							<div class='tableauPlaceholder' id='viz1744219259443' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;TopEarningGenres&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Top10HighestGrossingMovieGenres&#47;TopEarningGenres' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;TopEarningGenres&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744219259443');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
@@ -79,6 +77,16 @@
 							<p>The top highest-earning movies belong mainly to Action, Adventure, Fantasy, and Animation genres.</p>
 								<div class='tableauPlaceholder' id='viz1744219535646' style='position: relative;'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Top10HighestGrossingMovieGenres&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744219535646');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height='500px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 							
+						</div>
+					</section>
+
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content">
+							<h1>Avatar</h1>
+							<p class="major">James Cameron’s sci-fi fantasy blockbuster "Avatar" broke records and continues to hold the title of <a href="https://www.boxofficemojo.com/chart/top_lifetime_gross">top box office earner</a>. Sam Worthington plays Jake Sully, a paralyzed ex-Marine who starts a new life on the planet Pandora by inhabiting an avatar of its indigenous species.</p>
+						</div>
+						<div class="image">
+							<img src="images/avatar.jpg" alt="" />
 						</div>
 					</section>
 
