add stacked chart for month released

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
 							<h3>Genres of Top 10 movies</h3>
 							<p>The top highest-earning movies belong mainly to Action, Adventure, Fantasy, and Animation genres.</p>
 								<div class='tableauPlaceholder' id='viz1744219535646' style='position: relative;'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Top10HighestGrossingMovieGenres&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744219535646');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height='500px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-							
 						</div>
 					</section>
 
@@ -86,21 +85,16 @@
 							<p class="major">James Cameron’s sci-fi fantasy blockbuster "Avatar" broke records and continues to hold the title of <a href="https://www.boxofficemojo.com/chart/top_lifetime_gross">top box office earner</a>. Sam Worthington plays Jake Sully, a paralyzed ex-Marine who starts a new life on the planet Pandora by inhabiting an avatar of its indigenous species.</p>
 						</div>
 						<div class="image">
-							<img src="images/avatar.jpg" alt="" />
-						</div>
+							<img src="images/avatar.jpg" />
+							<figcaption>Image source: <a href="https://www.britannica.com/topic/Avatar-franchise">Britannica</a></figcaption>
+						  </div>
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h3>By examining the release months alongside worldwide gross, we can uncover the patterns that drive cinematic success. Certain genres and seasonal trends emerge as major influencers, shaping the timing and impact of a film's performance. How can studios time strategically time their biggest releases to capture audience attention.</h3>
+							<div class='tableauPlaceholder' id='viz1744227024907' style='position: relative'><noscript><a href='#'><img alt='Release Month vs Worldwide Gross ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;re&#47;release_month_vs_gross&#47;ReleaseMonthvsWorldwideGross&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='release_month_vs_gross&#47;ReleaseMonthvsWorldwideGross' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;re&#47;release_month_vs_gross&#47;ReleaseMonthvsWorldwideGross&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744227024907');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 						</div>
 					</section>
 
