--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					          <img alt='Star Power producing more number of Box Office Hits' src='https://public.tableau.com/static/images/Bo/Book1_17443024587410/Sheet4/1.png' style='border: none;' />
 					        </a>
 					      </noscript>
-					      <object class='tableauViz' style='width: 100%; display: none;'>
+					      <object class='tableauViz' style='width: 100%; height: 600px;'>
 					        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
 					        <param name='embed_code_version' value='3' />
 					        <param name='site_root' value='' />
