--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					</div>
 				</section>
 
-				<section class="banner style1 orient-left image-position-right fullscreen onload-image-fade-in onload-content-fade-left">
+				<section class="banner style1 orient-left image-position-right fullscreen onload-image-fade-in onload-content-fade-left tableauPlaceholder">
 						<div class="content">
 							<h2>Star Power That Sells</h2>
 							<p>When it comes to what makes a movie a box office hit, the right cast can make all the difference. Our analysis shows that certain actor combinations consistently bring audiences to theaters — and bring studios reliable returns. Actor groups that appear together in successful franchises often lead to multiple box office hits, highlighting the influence of casting continuity and audience familiarity.</p>
@@ -146,7 +146,7 @@
 				</section>
 				
 				<!-- Five -->
-				<section class="banner style1 orient-left image-position-right fullscreen onload-image-fade-in onload-content-fade-left">
+				<section class="banner style1 orient-left image-position-right fullscreen onload-image-fade-in onload-content-fade-left tableauPlaceholder">
 						<div class="content">
 							<h2>Star Power That Sells</h2>
 							<p>When it comes to what makes a movie a box office hit, the right cast can make all the difference. Our analysis shows that certain actor combinations consistently bring audiences to theaters — and bring studios reliable returns. Actor groups that appear together in successful franchises often lead to multiple box office hits, highlighting the influence of casting continuity and audience familiarity.</p>
