--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					</div>
 				</section>
 
-				<section class="banner style1 orient-left image-position-right fullscreen onload-image-fade-in onload-content-fade-left tableauPlaceholder">
+				<section class="banner style1 orient-right image-position-left fullscreen onload-image-fade-in onload-content-fade-right tableauPlaceholder">
 						<div class="content">
 							<h2>Star Power That Sells</h2>
 							<p>Another factor that makes a movie a box office hit, is the right cast. Our analysis shows that certain actor combinations consistently bring audiences to theaters — and bring studios reliable returns. Actor groups that appear together in successful franchises often lead to multiple box office hits, highlighting the influence of casting continuity and audience familiarity.</p>
