--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							<p class="major">JThe visualization highlights how long-running franchises like Harry Potter demonstrate the power of consistent casting. The trio of actors who led the series appeared together across all eight films, creating a deep emotional bond with audiences over a decade. This familiarity and continuity helped turn each installment into a box office hit. As fans grew alongside the characters, their loyalty extended beyond the story to the actors themselves. This enduring relationship between audience and cast shows how franchise-based star power can drive repeated commercial success.</p>
 						</div>
 						<div class="image">
-							<img src="images/avatar.jpg" />
+							<img src="images/hp-trio.jpg" />
 <!-- 							<figcaption>Image source: <a href="https://www.britannica.com/topic/Avatar-franchise">Britannica</a></figcaption> -->
 						  </div>
 				</section>
