--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
 				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Harry Potter Franchise</h1>
-							<p class="major">JThe visualization highlights how long-running franchises like Harry Potter demonstrate the power of consistent casting. The trio of actors who led the series appeared together across all eight films, creating a deep emotional bond with audiences over a decade. This familiarity and continuity helped turn each installment into a box office hit. As fans grew alongside the characters, their loyalty extended beyond the story to the actors themselves. This enduring relationship between audience and cast shows how franchise-based star power can drive repeated commercial success.</p>
+							<h1>Harry Potter</h1>
+							<p class="major">The visualization highlights how long-running franchises like Harry Potter demonstrate the power of consistent casting. The trio of actors who led the series appeared together across all eight films, creating a deep emotional bond with audiences over a decade. This familiarity and continuity helped turn each installment into a box office hit. As fans grew alongside the characters, their loyalty extended beyond the story to the actors themselves. This enduring relationship between audience and cast shows how franchise-based star power can drive repeated commercial success.</p>
 						</div>
 						<div class="image">
 							<img src="images/hp-trio.jpg" />
