--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						</div>
 				</section>
 
-				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" style="height: 500px;">
 						<div class="content">
 							<h1>Harry Potter</h1>
 							<p class="major">The visualization highlights how long-running franchises like Harry Potter demonstrate the power of consistent casting. The trio of actors who led the series appeared together across all eight films, creating a deep emotional bond with audiences over a decade. This familiarity and continuity helped turn each installment into a box office hit. As fans grew alongside the characters, their loyalty extended beyond the story to the actors themselves. This enduring relationship between audience and cast shows how franchise-based star power can drive repeated commercial success.</p>
@@ -128,7 +128,7 @@
 						<div class="image">
 							<img src="images/golden-trio.jpg"
 							     alt="Harry Potter Trio"
-							     style="width: 100%; max-height: 500px; object-fit: cover; border-radius: 8px; display: block;" />
+							     style="height: 100%; width: auto; object-fit: cover; display: block; border-radius: 8px;" />
 <!-- 							<figcaption>Image source: <a href="https://www.britannica.com/topic/Avatar-franchise">Britannica</a></figcaption> -->
 						  </div>
 				</section>
