--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
 						</div>
 				</section>
 
-				<section class="banner style1 orient-left content-align-left image-position-right onload-image-fade-in onload-content-fade-right" style="display: flex; align-items: stretch;">
-					  <div class="content" style="flex: 1;">
+				<section style="display: flex; flex-wrap: wrap; align-items: stretch; background-color: white; padding: 2rem;">
+					  <div style="flex: 1 1 500px; padding-right: 2rem; display: flex; flex-direction: column; justify-content: center;">
 					    <h2>Harry Potter</h2>
-					    <p>he visualization highlights how long-running franchises like Harry Potter demonstrate the power of consistent casting. The trio of actors who led the series appeared together across all eight films, creating a deep emotional bond with audiences over a decade. This familiarity and continuity helped turn each installment into a box office hit. As fans grew alongside the characters, their loyalty extended beyond the story to the actors themselves. This enduring relationship between audience and cast shows how franchise-based star power can drive repeated commercial success.</p>
+					    <p>The visualization highlights how long-running franchises like <em>Harry Potter</em> demonstrate the power of consistent casting. The trio of actors who led the series appeared together across all eight films, creating a deep emotional bond with audiences over a decade. This familiarity and continuity helped turn each installment into a box office hit. As fans grew alongside the characters, their loyalty extended beyond the story to the actors themselves. This enduring relationship between audience and cast shows how franchise-based star power can drive repeated commercial success.</p>
 					  </div>
-					  <div class="image" style="flex: 1; overflow: hidden;">
+					  <div style="flex: 1 1 500px; max-height: 500px; overflow: hidden;">
 					    <img src="images/golden-trio.jpg" alt="Harry Potter Trio"
-					         style="width: 100%; height: 100%; object-fit: cover; display: block;" />
+					         style="width: 100%; height: 100%; object-fit: cover; display: block; border-radius: 8px;" />
 					  </div>
 				</section>
 
